--- a/legalbit.html
+++ b/legalbit.html
@@ -124,11 +124,11 @@
 
   <!-- header ends here-->
   <!-- image background and program introduction-->
-<section class="programs-detail-section bg-gray-800 bg-center w-full  text-white">
-  <div class="w-full  h-full header-bg opacity-70 py-12 md:py-24  px-2 md:px-14  ">
+<section class="programs-detail-section bg-gray-800 bg-center bg-cover w-full  text-white">
+  <div class="w-full  h-full header-bg opacity-70 py-12 md:py-20  px-2 md:px-14  ">
     <!--<h1 class="text-sm font-light md:text-2xl animate__animated animate__fadeIn animate__slow animate__delay-1.5s "> <span class="block leading-none">Welcome To</span>
         </h1>-->
-        <div class="md:pt-14 md:px-10  xl:px-32">
+        <div class="md:px-10  xl:px-32">
             <div class="w-full text-white ">
                 <!--<div class="text-sm font-light md:text-3xl lg:text-5xl animate__animated animate__fadeIn animate__slow animate__delay-1.5s ">
                     <span class="block leading-none">Welcome To</span>
@@ -136,8 +136,7 @@
                 <div
                     class="text-4xl garamond md:text-8xl animate__animated animate__fadeIn animate__slow animate__delay-1s tracking-tight">
                     <span class="block leading-none font-semibold ">Weekly Legal Bit </span> 
-                  <p class="text-sm md:text-2xl italic mt-3 tracking-wide"> A Weekly Legal Publication of the Chambers</p>
-                    
+                  <p class="text-sm md:text-xl italic mt-3 tracking-wider"> A Weekly Legal Publication of the Chambers</p>
                     </div>
         
   </div>
@@ -147,26 +146,24 @@
 <section class="bg-white ">
   <!--<h1 class="text-xs md:text-2xl pt-2 px-2 text-gray-500 mb-4"> <a href="../my.html" class=""> Home </a> | <a class="" href=" "> Publications</a></h1>-->
   <div class="">
-  <button class="bg-yellow-600 text-center text-base text-white py-1 md:text-3xl uppercase px-2 garamond font-bold"> about:</button>
-  <p class="text-sm md:text-4xl my-4 md:my-12 text-center px-5 font-light"> The Weekly Legal Bit publication features a weekly publication of legal nuggets by the Research and Litigation Directorate. It provides concise and informative insights into recent decisions of the Nigerian Courts — the Supreme Court and the Court of Appeal.<div></div></p>
+  <button class="bg-yellow-600 text-center text-base text-white py-1 md:text-xl uppercase px-2 garamond font-bold"> about:</button>
+  <p class="text-sm md:text-2xl my-4 md:my-12 text-center px-5 font-light"> The Weekly Legal Bit publication features a weekly publication of legal nuggets by the Research and Litigation Directorate. It provides concise and informative insights into recent decisions of the Nigerian Courts — the Supreme Court and the Court of Appeal.<div></div></p>
   <p class="text-6xl md:text-9xl text-center px-2 text-gray-800"> - - - - - </p>
 
   </div>
   
  
    <!--publication samples grid-->
-   <article class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6 md:mt-12 px-4 md:px-10 mx-auto" id="legalbit-posts">
+   <article class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-6 md:mt-12 px-4 md:px-16 mx-auto" id="legalbit-posts">
    </article>
 </section>
 
 
 <!--reference link-->
 <section class="px-5 mb-24 mt-10 md:mt-32">
-  <div class="uppercase text-white bg-yellow-800 p-4 md:p-10 text-base md:text-3xl text-center mb-8 md:mb-16 hover:bg-gray-300 hover:text-black"> <a class="legalbit.html">Weekly Legal Bits </a> </div>
-  <div class="uppercase text-white bg-yellow-800 p-4 md:p-10 text-base md:text-3xl text-center mb-8 md:mb-16 hover:bg-gray-300 hover:text-black"> <a class="poetrylines.html">Weekly Poetry Lines </a> </div>
-  <div class="uppercase text-white bg-yellow-800 p-4 md:p-10 text-base md:text-3xl text-center mb-8 md:mb-16 hover:bg-gray-300 hover:text-black"> <a class="news.html">News and Updates </a> </div>
-
-
+  <div class="uppercase text-white bg-yellow-800 p-4 md:p-6 text-base md:text-xl text-center mb-8 md:mb-6 hover:bg-gray-300 hover:text-black"> <a href="legalbit.html">Weekly Legal Bits </a> </div>
+<div class="uppercase text-white bg-yellow-800 p-4 md:p-6 text-base md:text-xl text-center mb-8 md:mb-6 hover:bg-gray-300 hover:text-black"> <a href="poetrylines.html">Weekly Poetry Lines </a> </div>
+<div class="uppercase text-white bg-yellow-800 p-4 md:p-6 text-base md:text-xl text-center mb-8 md:mb-6 hover:bg-gray-300 hover:text-black"> <a href="news.html">News and Updates </a> </div>
 </section>
 
   <!-- Reach out to us -->
