--- a/legalbit.html
+++ b/legalbit.html
@@ -147,7 +147,7 @@
   <!--<h1 class="text-xs md:text-2xl pt-2 px-2 text-gray-500 mb-4"> <a href="../my.html" class=""> Home </a> | <a class="" href=" "> Publications</a></h1>-->
   <div class="">
   <button class="bg-yellow-600 text-center text-base text-white py-1 md:text-xl uppercase px-2 garamond font-bold"> about:</button>
-  <p class="text-sm md:text-2xl my-4 md:my-12 text-center px-5 font-light"> The Weekly Legal Bit publication features a weekly publication of legal nuggets by the Research and Litigation Directorate. It provides concise and informative insights into recent decisions of the Nigerian Courts — the Supreme Court and the Court of Appeal.<div></div></p>
+  <p class="text-sm md:text-xl my-4 md:my-12 text-center px-5 font-light"> The Weekly Legal Bit publication features a weekly publication of legal nuggets by the Research and Litigation Directorate. It provides concise and informative insights into recent decisions of the Nigerian Courts — the Supreme Court and the Court of Appeal.<div></div></p>
   <p class="text-6xl md:text-9xl text-center px-2 text-gray-800"> - - - - - </p>
 
   </div>
