--- a/legalbit.html
+++ b/legalbit.html
@@ -153,7 +153,7 @@
   
  
    <!--publication samples grid-->
-   <article class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-6 md:mt-12 px-4 md:px-16 mx-auto" id="legalbit-posts">
+   <article class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-6 md:mt-12 px-4 md:px-16 mx-auto md:text-base" id="legalbit-posts">
    </article>
 </section>
 
