--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     </div>
 
  <!-- Image Slider Container -->
-    <div class="relative w-full overflow-hidden rounded-lg shadow-lg absolute block w-full h-96 md:h- md:px-64  ">
+    <div class="relative w-full overflow-hidden rounded-lg shadow-lg absolute block w-full h- md:h- md:px-64  ">
         <div id="gallery-slider" class="flex transition-transform duration-700">
             <!-- Images will be inserted here dynamically -->
         </div>
