--- a/index.html
+++ b/index.html
@@ -477,14 +477,14 @@
 
 
 <!-- ANOTHER GALLERY HERE -->
-  <section class="bg-gray-50 py-10 md:py-44">
-    <div class="mb-10">
+  <section class="bg-gray-50 py-10 md:py-24">
+    <div class="">
       <h2 class=" text-center uppercase font-bold text-2xl md:text-3xl "> Our gallery</h2>
       <h6 class="text-center text-xs md:text-base font-light mt-1 md:mt-6"> Get up with our past historical events.</h6>
     </div>
 
  <!-- Image Slider Container -->
-    <div class="relative w-full overflow-hidden rounded-lg shadow-lg absolute block w-full h- md:h- md:px-64  ">
+    <div class="relative overflow-hidden rounded-lg absolute block mt-10 h- md:h- md:px-64  ">
         <div id="gallery-slider" class="flex transition-transform duration-700">
             <!-- Images will be inserted here dynamically -->
         </div>
