--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     </div>
 
  <!-- Image Slider Container -->
-    <div class="relative overflow-hidden rounded-lg absolute block mt-10 h- md:h- md:px-64  ">
+    <div class="relative overflow-hidden rounded-lg absolute block mt-10 h-96 md:h- md:px-64  ">
         <div id="gallery-slider" class="flex transition-transform duration-700">
             <!-- Images will be inserted here dynamically -->
         </div>
